<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use Huawei Mobile Services. Please launch Phone Manager or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">You are already using the latest version.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download Huawei Mobile Services package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">Downloading Huawei Mobile Services\nprogress: %d%%</string>
    <string name="hms_downloading_new">Downloading HMS</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">Huawei Mobile Services must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_message">Update to the latest version of Huawei Mobile Services to use this feature. Update now?</string>
    <string name="hms_update_message_new">This service requires the latest version of the following app:\n\n%1$s</string>
    <string name="hms_update_title">Huawei Mobile Services</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="__picker_all_image">All Images</string>
    <string name="__picker_cancel">Cancel</string>
    <string name="__picker_confirm_to_delete">Confirm to delete?</string>
    <string name="__picker_delete">Delete</string>
    <string name="__picker_deleted_a_photo">Deleted a photo</string>
    <string name="__picker_done">Done</string>
    <string name="__picker_done_with_count">Done(%1$d/%2$d)</string>
    <string name="__picker_image_count">%1$d</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_over_max_count_tips">You can only select %1$d images</string>
    <string name="__picker_title">Images</string>
    <string name="__picker_undo">Undo</string>
    <string name="__picker_yes">Yes</string>
    <string name="app_label">Download Manager</string>
    <string name="auto_restart_under_wifi">Wi-Fi will automatically download this file</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_start_now">Start now</string>
    <string name="dialog_insufficient_space_on_cache">Not enough space on internal download storage</string>
    <string name="dialog_insufficient_space_on_external">Not enough space on external storage</string>
    <string name="dialog_not_show_again">不再提示</string>
    <string name="download_error">Unsuccessful</string>
    <string name="download_no_application_title">Can\'t open file</string>
    <string name="download_percent">%d%%</string>
    <string name="download_queued">Queued</string>
    <string name="download_remaining">%s left</string>
    <string name="download_running">In progress</string>
    <string name="download_running_percent">In progress, %d%%</string>
    <string name="download_unknown_title">&lt;Untitled&gt;</string>
    <string name="notif_text_engine_off">Xunlei accelerator is off.</string>
    <string name="notif_text_engine_on">Accelerating…</string>
    <string name="notif_title_file_size">共%1$d个文件</string>
    <string name="notif_title_multiple_downloading">Downloading %1$d files</string>
    <string name="notif_title_single_downloading">正在下载%1$s</string>
    <string name="notification_download_complete">Download complete.</string>
    <string name="notification_download_failed">Download unsuccessful.</string>
    <string name="notification_need_wifi_for_size">Download size requires Wi-Fi.</string>
    <string name="notification_paused_in_background">Paused in background.</string>
    <string name="paused_waiting_for_network">Waiting for network</string>
    <string name="permdesc_accessAllDownloads">Allows the app to view and modify all downloads initiated by any app on the system.</string>
    <string name="permdesc_downloadCacheNonPurgeable">Allows the app to download files to the download cache, which can\'t be automatically deleted when the download manager needs more space.</string>
    <string name="permdesc_downloadCompletedIntent">Allows the app to send notifications about completed downloads. Malicious apps can use this to confuse other apps that download files.</string>
    <string name="permdesc_downloadManager">Allows the app to access the download manager and to use it to download files. Malicious apps can use this to disrupt downloads and access private information.</string>
    <string name="permdesc_downloadManagerAdvanced">Allows the app to access the download manager\'s advanced functions. Malicious apps can use this to disrupt downloads and access private information.</string>
    <string name="permdesc_downloadWithoutNotification">Allows the app to download files through the download manager without any notification being shown to the user.</string>
    <string name="permlab_accessAllDownloads">Access all system downloads</string>
    <string name="permlab_downloadCacheNonPurgeable">Reserve space in the download cache</string>
    <string name="permlab_downloadCompletedIntent">Send download notifications.</string>
    <string name="permlab_downloadManager">Access download manager.</string>
    <string name="permlab_downloadManagerAdvanced">Advanced download manager functions.</string>
    <string name="permlab_downloadWithoutNotification">download files without notification</string>
    <string name="privacy_notif_content">Touch to view details.</string>
    <string name="privacy_notif_title">Xunlei Download Accelerator is on</string>
    <string name="privacy_tip_cancel">Cancel</string>
    <string name="privacy_tip_content">Use Xunlei Accelerator to speed up downloads? The URL of the download\'s host will uploaded to Xunlei\'s servers. Your Mi Account details will also be uploaded to check if you have any active subscriptions to this service.</string>
    <string name="privacy_tip_ok">OK</string>
    <string name="privacy_tip_title">Use Xunlei Accelerator?</string>
    <string name="root_downloads">Downloads</string>
    <string name="activation_payment_account">购买帐户:</string>
    <string name="activation_payment_business">支付业务:</string>
    <string name="activation_payment_ok">完成</string>
    <string name="activation_payment_success">恭喜你，激活码充值成功！</string>
    <string name="activation_recharge">激活码充值</string>
    <string name="app_name">迅雷</string>
    <string name="click_refresh">点击刷新再试一下~</string>
    <string name="common_imageview_contentdescription">图片描述</string>
    <string name="commonui_dialog_title_tips">提示</string>
    <string name="commonui_invalid_network">网络不给力</string>
    <string name="default_description">default description</string>
    <string name="dialog_button_text_cancel">取消</string>
    <string name="dialog_button_text_confirm">确定</string>
    <string name="kuainiao_dialog_title">快鸟试用结束</string>
    <string name="kuainiao_notification_content_prefix">开通快鸟，畅享</string>
    <string name="kuainiao_notification_content_suffix">光纤</string>
    <string name="kuainiao_open_member">开通会员</string>
    <string name="lx_space_create_task">新建任务</string>
    <string name="lx_space_create_url_task">新建离线链接</string>
    <string name="lx_space_privelege_detail">离线服务器下载完成后，取回本地速度大幅度提升</string>
    <string name="lx_space_task_del_main_content">确认删除该离线任务吗？</string>
    <string name="lx_space_task_del_sub_content">该任务离线下载为0%，删除后自动回退离线个数消耗</string>
    <string name="lx_space_task_operate_copy_original_url">复制原始下载链接</string>
    <string name="lx_space_task_operate_delete">删除</string>
    <string name="lx_space_vip_privilege_tip1">稳定省时，高速取回</string>
    <string name="payment">支付</string>
    <string name="sett_auto_delete">自动删除安装包</string>
    <string name="sett_auto_delete_description">应用安装后自动从下载列表中删除</string>
    <string name="sett_download_auto_accerate">自动开启下载加速</string>
    <string name="sett_download_auto_accerate_tips">会员登录后开启自动加速</string>
    <string name="sett_download_auto_sync_to_lixian_space">下载任务自动同步到离线空间</string>
    <string name="sett_download_auto_sync_to_lixian_space_tips">下载任务自动同步到离线空间</string>
    <string name="sett_download_install">下载应用后提示安装</string>
    <string name="sett_ignore_battery_optimizations">忽略电池优化</string>
    <string name="sett_ignore_battery_optimizations_description">允许迅雷后台继续下载</string>
    <string name="sett_task_num">同时下载任务数</string>
    <string name="short_list_refresh">刷新</string>
    <string name="user_default_value">--</string>
</resources>