<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@drawable/commonui_dlg_bkg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="13dp">
    <TextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/lx_space_task_del_dlg_title" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/commonui_dialog_title_tips" style="@style/CommonUI_DialogTitleTextStyle" />
    <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="17dp" android:paddingRight="17dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/lx_space_task_del_main_content" style="@style/CommonUI_DialogContentTextStyle" />
    <TextView android:textSize="10sp" android:textColor="@color/lx_space_blue_txt" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/lx_space_task_del_dlg_tip_content" android:paddingLeft="17dp" android:paddingRight="17dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="8dp" android:text="@string/lx_space_task_del_sub_content" style="@style/CommonUI_DialogContentTextStyle" />
    <View android:background="#dedede" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="22dp" />
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001">
        <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/lx_space_task_del_dlg_cancel_btn" android:visibility="visible" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/dialog_button_text_cancel" android:layout_weight="1.0" style="@style/CommonUI_DialogLeftButtonStyle" />
        <View android:background="#dedede" android:layout_width="UNKNOWN_DATA_0x100" android:layout_height="match_parent" />
        <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/lx_space_task_del_dlg_confirm_btn" android:visibility="visible" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/dialog_button_text_confirm" android:layout_weight="1.0" style="@style/CommonUI_DialogRightButtonStyle" />
    </LinearLayout>
</LinearLayout>
