<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerVertical="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/emtpy_image" android:layout_width="UNKNOWN_DATA_0xaa01" android:layout_height="UNKNOWN_DATA_0x7801" android:src="@drawable/commonui_bg_invalid_network" android:scaleType="fitCenter" android:adjustViewBounds="true" android:contentDescription="@string/app_name" />
        <TextView android:textSize="16sp" android:textColor="@color/cloud_list_empty_title_text" android:ellipsize="middle" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/no_net_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/commonui_invalid_network" android:singleLine="true" />
        <TextView android:textSize="12sp" android:textColor="@color/cloud_list_empty_detail_text" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/empty_tip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/click_refresh" android:singleLine="true" />
        <Button android:textSize="16sp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/empty_refresh_btn" android:background="@drawable/commonui_blue_rounded_button_selector" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginTop="24dp" android:text="@string/short_list_refresh" style="?unknown_attr_ref: 101032b" />
    </LinearLayout>
</RelativeLayout>
